Bug 69272 - Fix Haze deprecations
Summary: Fix Haze deprecations
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: haze (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 69318
  Show dependency treegraph
 
Reported: 2013-09-12 13:57 UTC by Guillaume Desmottes
Modified: 2013-09-17 13:11 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
bump TP_VERSION to 0.22 (1.25 KB, patch)
2013-09-12 13:58 UTC, Guillaume Desmottes
Details | Splinter Review
use tp-glib single includes (12.57 KB, patch)
2013-09-12 13:58 UTC, Guillaume Desmottes
Details | Splinter Review
use TP_SEAL_ENABLE (11.96 KB, patch)
2013-09-12 13:58 UTC, Guillaume Desmottes
Details | Splinter Review
use TP_SEAL_ENABLE (12.16 KB, patch)
2013-09-12 14:46 UTC, Guillaume Desmottes
Details | Splinter Review
1/4] Finish "sealing" TpBaseConnection (5.15 KB, patch)
2013-09-16 18:39 UTC, Simon McVittie
Details | Splinter Review
2/4] haze_connection_manager_class_init: don't assign to deprecated members (954 bytes, patch)
2013-09-16 18:39 UTC, Simon McVittie
Details | Splinter Review
3/4] All .c files: include config.h (2.92 KB, patch)
2013-09-16 18:39 UTC, Simon McVittie
Details | Splinter Review
4/4] All .c files: include corresponding header first, after config.h (1.68 KB, patch)
2013-09-16 18:40 UTC, Simon McVittie
Details | Splinter Review

Description Guillaume Desmottes 2013-09-12 13:57:09 UTC
.
Comment 1 Guillaume Desmottes 2013-09-12 13:58:05 UTC
Created attachment 85720 [details] [review]
bump TP_VERSION to 0.22
Comment 2 Guillaume Desmottes 2013-09-12 13:58:19 UTC
Created attachment 85721 [details] [review]
use tp-glib single includes
Comment 3 Guillaume Desmottes 2013-09-12 13:58:34 UTC
Created attachment 85722 [details] [review]
use TP_SEAL_ENABLE
Comment 4 Simon McVittie 2013-09-12 14:27:37 UTC
Comment on attachment 85720 [details] [review]
bump TP_VERSION to 0.22

Review of attachment 85720 [details] [review]:
-----------------------------------------------------------------

++

(That's probably because Haze is the only one that already has a 'next' branch, so someone did this work already.)
Comment 5 Simon McVittie 2013-09-12 14:28:32 UTC
Comment on attachment 85721 [details] [review]
use tp-glib single includes

Review of attachment 85721 [details] [review]:
-----------------------------------------------------------------

++
Comment 6 Simon McVittie 2013-09-12 14:31:40 UTC
Comment on attachment 85722 [details] [review]
use TP_SEAL_ENABLE

Review of attachment 85722 [details] [review]:
-----------------------------------------------------------------

::: src/connection.c
@@ +510,5 @@
>      g_return_val_if_fail (self->account != NULL, FALSE);
>  
> +    tp_base_connection_set_self_handle (base, tp_handle_ensure (contact_handles,
> +        purple_account_get_username (self->account), NULL, error));
> +    if (tp_base_connection_get_self_handle (base) == 0)

The tp_handle_ensure() should really be separate, and done first.
Comment 7 Simon McVittie 2013-09-12 14:32:02 UTC
I'd forgotten that Haze has StreamedMedia. :-(
Comment 8 Guillaume Desmottes 2013-09-12 14:46:43 UTC
Created attachment 85726 [details] [review]
use TP_SEAL_ENABLE
Comment 9 Guillaume Desmottes 2013-09-12 14:47:54 UTC
(In reply to comment #7)
> I'd forgotten that Haze has StreamedMedia. :-(

Let's just nuke it. It's now like it was actually used any way.
Comment 10 Simon McVittie 2013-09-16 09:41:36 UTC
Comment on attachment 85726 [details] [review]
use TP_SEAL_ENABLE

Review of attachment 85726 [details] [review]:
-----------------------------------------------------------------

Ship it
Comment 11 Simon McVittie 2013-09-16 09:46:31 UTC
(In reply to comment #9)
> (In reply to comment #7)
> > I'd forgotten that Haze has StreamedMedia. :-(
> 
> Let's just nuke it. It's now like it was actually used any way.

It looks as though Pidgin implements media for XMPP (we have Gabble), MSNP (basically dead) and MXIT (sufficiently obscure that I don't know whether it even works in Telepathy)... so, yes, I'm inclined to agree.
Comment 12 Guillaume Desmottes 2013-09-16 10:28:57 UTC
merged to master.
Comment 13 Simon McVittie 2013-09-16 18:27:02 UTC
Haze didn't include config.h in every file, so this was ineffective.
Comment 14 Simon McVittie 2013-09-16 18:39:04 UTC
Created attachment 85931 [details] [review]
1/4] Finish "sealing" TpBaseConnection
Comment 15 Simon McVittie 2013-09-16 18:39:19 UTC
Created attachment 85932 [details] [review]
2/4] haze_connection_manager_class_init: don't assign to  deprecated members
Comment 16 Simon McVittie 2013-09-16 18:39:32 UTC
Created attachment 85933 [details] [review]
3/4] All .c files: include config.h
Comment 17 Simon McVittie 2013-09-16 18:40:01 UTC
Created attachment 85934 [details] [review]
4/4] All .c files: include corresponding header first, after  config.h

This verifies self-containedness. It turns out contact-list was not
actually self-contained: include <libpurple/account.h> to fix that.
Comment 18 Guillaume Desmottes 2013-09-17 09:32:46 UTC
Comment on attachment 85931 [details] [review]
1/4] Finish "sealing" TpBaseConnection

Review of attachment 85931 [details] [review]:
-----------------------------------------------------------------

++
Comment 19 Guillaume Desmottes 2013-09-17 09:33:01 UTC
Comment on attachment 85932 [details] [review]
2/4] haze_connection_manager_class_init: don't assign to  deprecated members

Review of attachment 85932 [details] [review]:
-----------------------------------------------------------------

++
Comment 20 Guillaume Desmottes 2013-09-17 09:35:06 UTC
Comment on attachment 85933 [details] [review]
3/4] All .c files: include config.h

Review of attachment 85933 [details] [review]:
-----------------------------------------------------------------

++

Do you have a magic rune to spot/fix those?
Comment 21 Guillaume Desmottes 2013-09-17 09:35:28 UTC
Comment on attachment 85934 [details] [review]
4/4] All .c files: include corresponding header first, after  config.h

Review of attachment 85934 [details] [review]:
-----------------------------------------------------------------

++
Comment 22 Simon McVittie 2013-09-17 09:40:57 UTC
(In reply to comment #20)
> Do you have a magic rune to spot/fix those?

find . -name '*.c' | xargs grep --files-without-match '\<config.h' | xargs gvim

(xargs gvim is my new favourite hammer.)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.