use TP_SEAL_ENABLE

https://bugs.freedesktop.org/show_bug.cgi?id=69272